@@ -3,8 +3,6 @@
 cpu		HAMMER
 ident		Debian-amd64
 
-options		SMP		# Symmetric MultiProcessor Kernel
-
 options		COMPAT_LINUX32
 
 # UTF-8 console support
