@@ -4,8 +4,6 @@ cpu		I686_CPU
 makeoptions	COPTFLAGS="-O2 -pipe -march=i686 -mtune=generic"
 ident		Debian-i686
 
-options		SMP		# Symmetric MultiProcessor Kernel
-
 options		COMPAT_LINUX
 
 # UTF-8 console support
