@@ -25,15 +25,6 @@
  options 	KTRACE			# ktrace(1) support
  options 	STACK			# stack(9) support
  options 	SYSVSHM			# SYSV-style shared memory
-@@ -78,7 +80,7 @@
- options 	KDB_TRACE		# Print a stack trace for a panic.
- 
- # Make an SMP-capable kernel by default
--options 	SMP			# Symmetric MultiProcessor Kernel
-+#options 	SMP			# Symmetric MultiProcessor Kernel
- 
- # CPU frequency control
- device		cpufreq
 @@ -87,9 +89,6 @@
  device		acpi
  device		pci
@@ -121,15 +112,6 @@
  options 	KTRACE			# ktrace(1) support
  options 	STACK			# stack(9) support
  options 	SYSVSHM			# SYSV-style shared memory
-@@ -78,7 +82,7 @@
- options 	KDB_TRACE		# Print a stack trace for a panic.
- 
- # To make an SMP kernel, the next two lines are needed
--options 	SMP			# Symmetric MultiProcessor Kernel
-+#options 	SMP			# Symmetric MultiProcessor Kernel
- device		apic			# I/O APIC
- 
- # CPU frequency control
 @@ -89,9 +93,6 @@
  device		eisa
  device		pci
