@@ -6,8 +6,9 @@ kfreebsd-10 (10.0~svn232747-2) UNRELEASED; urgency=low
     in debian/rules).
   * Remove ALTQ_NOPCC in kernel configs, it is no longer required by SMP
     systems (see altq_subr.c).
+  * Defer SMP kernel option to upstream config.
 
- -- Robert Millan <rmh@debian.org>  Sun, 18 Mar 2012 18:10:30 +0100
+ -- Robert Millan <rmh@debian.org>  Sun, 18 Mar 2012 18:12:03 +0100
 
 kfreebsd-10 (10.0~svn232747-1) experimental; urgency=low
 
